--- a/class1-intro/index.html
+++ b/class1-intro/index.html
@@ -14,7 +14,7 @@
                 nulla exercitationem pariatur beatae minus quidem quia natus officiis mollitia. Facilis 
                 excepturi at dolor? Commodi deserunt necessitatibus atque ab tempore facilis consequatur?
                  Saepe at dolore optio sunt odio rerum incidunt rem! Unde quod soluta perferendis 
-                 <span style="background-color: greenyellow;">Lorem ipsum dolor sit amet consectetur 
+                 <span style="background-color: grey;">Lorem ipsum dolor sit amet consectetur 
                     adipisicing elit. Eius reiciendis obcaecati qui excepturi perspiciatis vel harum. 
                     Voluptatibus tempore neque eligendi reprehenderit eum, quidem eaque, tenetur amet 
                     voluptatem aspernatur omnis libero?</span>totam atque accusantium ea quia, rem, maxime
