--- a/class2-selectors/index.html
+++ b/class2-selectors/index.html
@@ -1,10 +1,29 @@
 <html>
     <head>
         <link rel="stylesheet" href="./style.css">
+        <style>
+            i,h1,h2{
+                background-color: grey;
+            }
+        </style>
+
 
     </head>
     <body>
+        <h1 style="background-color: black;" id="abc" class="vijay">Good Morning</h1>
+        <h1 id="abc" class="vijay">Good Morning</h1>
         <h1 class="vijay">Good Morning</h1>
-        <h2 class="vs">Good Afternoon</h2>
+        <h2>Good Afternoon</h2>
+        <h5 class="mahesh">fab</h5>
+        <h5 id="gt">fab</h5>
+        <h5 id="abc">fab</h5>
+        <h5 id="abc" id="gt" >fab</h5>
+        <h5>fab</h5>
+
+        <pre style="background-color: darkcyan;">Lorem ipsum dolor sit amet consectetur adipisicing elit.</pre>
+        <p id="abc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque 
+            alias maxime recusandae? Nihil voluptates amet quod voluptatibus aut possimus
+             nobis corporis illum natus, totam in doloremque, officiis ipsum maiores quo!</p>
+        <i>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, illum.</i>
     </body>
 </html>
