--- a/class1-intro/index1.html
+++ b/class1-intro/index1.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="./index.css">
         <style>
             h1{
-                background-color: lightgreen;
+                background-color: yellow;
             }
         </style>
         <!-- <link rel="stylesheet" href="./index.css"> -->
